# iac-terraform-python

./: Dockerfile  README.md  compose.yml  main.tf  pyproject.toml
src/: main.py
