[tool.poetry]
name = "iac-terraform-python"
version = "0.1.0"
description = ""
authors = ["Anderson de Araújo Alves <anderson.araujoa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
